[gd_scene load_steps=9 format=3 uid="uid://da1572uw524am"]

[ext_resource type="Script" path="res://scripts/slimeRobot.gd" id="1_v2prk"]
[ext_resource type="Texture2D" uid="uid://cyvenb8tpp2eu" path="res://assets/2d/shooterMinigame/slime.png" id="2_l3it4"]
[ext_resource type="Texture2D" uid="uid://b2ydkf5njndxc" path="res://assets/2d/shooterMinigame/explosionSprite.png" id="3_ljwb3"]
[ext_resource type="AudioStream" uid="uid://dinyinb3glr0r" path="res://assets/audio/sfx/shooter/smallEnemyDie.mp3" id="4_wd086"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hy4td"]
size = Vector2(56, 36)

[sub_resource type="CircleShape2D" id="CircleShape2D_oujyi"]
radius = 25.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xspvs"]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_72kh4"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 26.34
gravity = Vector3(0, 0, 0)
attractor_interaction_enabled = false
scale_min = 4.0
scale_max = 4.0
anim_speed_min = 0.8
anim_speed_max = 1.2

[node name="slimeRobot" type="CharacterBody2D"]
z_index = 1
position = Vector2(975, 342)
collision_layer = 64
script = ExtResource("1_v2prk")

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -14)
scale = Vector2(4, 4)
texture = ExtResource("2_l3it4")

[node name="bulletScanner" type="Area2D" parent="."]
position = Vector2(-2, -10)
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="hitbox" type="CollisionShape2D" parent="bulletScanner"]
position = Vector2(2, 10)
shape = SubResource("RectangleShape2D_hy4td")
disabled = true

[node name="health" type="ColorRect" parent="."]
visible = false
offset_left = -24.0
offset_top = -30.0
offset_right = 24.0
offset_bottom = -26.0
color = Color(0.929412, 0.94902, 0.886275, 1)

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oujyi")
disabled = true

[node name="explosionParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
material = SubResource("CanvasItemMaterial_xspvs")
position = Vector2(1, -1)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_72kh4")
texture = ExtResource("3_ljwb3")
one_shot = true
speed_scale = 4.0
explosiveness = 1.0

[node name="babySpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="die" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wd086")

[connection signal="area_entered" from="bulletScanner" to="." method="_on_bullet_scanner_area_entered"]
[connection signal="timeout" from="babySpawnTimer" to="." method="_on_baby_spawn_timer_timeout"]
